Fix z-index - Embed token-input in content (no z-index) - Set z-index in .css not in js-code so that it is easily customizable - Use z-index of 1005 to workaround issues with jQuery dialogs

--- a/styles/token-input-facebook.css
+++ b/styles/token-input-facebook.css
@@ -9,7 +9,6 @@ ul.token-input-list-facebook {
     font-size: 12px;
     font-family: Verdana;
     min-height: 1px;
-    z-index: 999;
     margin: 0;
     padding: 0;
     background-color: #fff;
@@ -80,7 +79,7 @@ div.token-input-dropdown-facebook {
     cursor: default;
     font-size: 11px;
     font-family: Verdana;
-    z-index: 1;
+    z-index: 1005;
 }
 
 div.token-input-dropdown-facebook p {
