--- a/styles/token-input.css
+++ b/styles/token-input.css
@@ -8,7 +8,6 @@ ul.token-input-list {
     cursor: text;
     font-size: 12px;
     font-family: Verdana;
-    z-index: 999;
     margin: 0;
     padding: 0;
     background-color: #fff;
@@ -72,7 +71,7 @@ div.token-input-dropdown {
     cursor: default;
     font-size: 12px;
     font-family: Verdana;
-    z-index: 1;
+    z-index: 1005;
 }
 
 div.token-input-dropdown p {
